--- a/sampleHTML/index.html
+++ b/sampleHTML/index.html
@@ -19,7 +19,7 @@
             <div class="button-outer">
                 <input type="radio" checked="true" value="passport" style="display: none;" name="documentType"/>
                 <div class="img-container active" style="width:216px;margin: 0 auto;" onclick="handleImageClick(event)">
-                    <img src="./src/img/passport.png"/>
+                    <img src="./src/img/passport.svg"/>
                     <p class="title">PASSPORT</p>
                 </div>
                     
@@ -27,22 +27,25 @@
             <div class="button-outer">
                 <input type="radio" checked="false" value="idCard" style="display: none;"  name="documentType" />
                 <div class="img-container" onclick="handleImageClick(event)" style="width:216px;margin: 0 auto;">
-                    <img src="./src/img/id-card.png"/>
+                    <img src="./src/img/id-card.svg"/>
                     <p class="title">ID CARD</p>
                 </div>
             </div>
         </div>
         <button onclick="handleDocumentPhotoClick()" id="takePhotoBTN" class="btn">Take a photo</button>
+        <p class="or">OR</p>
         </div>
         <div id="backSideDocContent" style="display:none">
-            <button onclick="document.querySelector('#document2').click()"  class="btn" id="UploadSecondPage">Upload back side</button>
+            <button onclick="document.querySelector('#document2').click()"  style="display:none" class="btn" id="UploadSecondPage">Upload back side</button>
             <input type="file" onchange="handleUploadDocumentBackSide()" id="document2" style="display:none" />
         </div>
         <div id="backSide" style="display: none;justify-content: center;">
         </div>
         <div class="canvas-container">
-            <canvas id="canvas" style="display: none;"></canvas>
-            <canvas id="stegCanvas" style="display: none;"></canvas>
+            <div class="canvas-outer">
+                <canvas id="canvas" style="display: none;"></canvas>
+                <canvas id="stegCanvas" style="display: none;"></canvas>
+            </div>
         </div>
         <button onclick="handleCaptureDocument()" style="display: none;" class="btn" id="captureBTN">Capture</button>
         <button onclick="document.querySelector('#document1').click()"  class="btn" id="UploadFirstPage">Upload a photo</button>
